--- a/configure.in
+++ b/configure.in
@@ -25,7 +25,8 @@ AC_DEFUN(AC_TYPE_SOCKLEN_T,
 [AC_CACHE_CHECK([for socklen_t], ac_cv_type_socklen_t,
 [
   AC_TRY_COMPILE(
-  [#include <sys/socket.h>],
+  [#include <sys/types.h>
+   #include <sys/socket.h>],
   [socklen_t len = 42; return len;],
   ac_cv_type_socklen_t=yes,
   ac_cv_type_socklen_t=no)
